--- a/Resources/currencies.yml
+++ b/Resources/currencies.yml
@@ -7,6 +7,13 @@ EUR:
     decimal: ','
     active: true
 
+IDR:
+    name: 'Rupiah'
+    symbol: 'Rp'
+    thousands: .
+    decimal: ','
+    active: true
+
 USD:
     name: 'U.S. Dollar'
     symbol: '$'
